--- a/sound-architect/package.json
+++ b/sound-architect/package.json
@@ -16,10 +16,16 @@
     ],
     "dependencies": {
         "@adobe/react-spectrum": "^3.33.1",
+        "@react-spectrum/dropzone": "^3.0.0-rc.1",
+        "@react-spectrum/theme-express": "^3.0.0-alpha.9",
+        "@spectrum-icons/express": "^3.0.0-alpha.13",
+        "@spectrum-icons/illustrations": "^3.6.9",
         "@swc-react/button": "0.39.4",
         "@swc-react/theme": "0.39.4",
         "react": "18.2.0",
+        "react-aria-components": "^1.0.1",
         "react-dom": "18.2.0",
+        "react-media-recorder": "^1.6.6",
         "use-sound": "^4.0.1"
     },
     "devDependencies": {
