--- a/minimalizer/package.json
+++ b/minimalizer/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "sound-architect",
+    "name": "minimalizer",
     "version": "1.0.0",
     "description": "Adobe Creative Cloud Web Add-on.",
     "scripts": {
