--- a/minimalizer/src/manifest.json
+++ b/minimalizer/src/manifest.json
@@ -1,6 +1,6 @@
 {
     "testId": "42f8d5ac-6c84-476c-825b-de7a54a9c2f3",
-    "name": "Sound Architect",
+    "name": "Minimalizer",
     "version": "1.0.0",
     "manifestVersion": 2,
     "requirements": {
