--- a/minimalizer/package.json
+++ b/minimalizer/package.json
@@ -22,6 +22,7 @@
         "@spectrum-icons/illustrations": "^3.6.9",
         "@swc-react/button": "0.39.4",
         "@swc-react/theme": "0.39.4",
+        "axios": "^1.6.7",
         "react": "18.2.0",
         "react-aria-components": "^1.0.1",
         "react-dom": "18.2.0",
